package NDoom;

// Defines a sequential mapping between global and local identifiers.
// Sequential means that the first N global ids are stored in the first chunk and so on.
// Example:
// Mapping with indices [0, 5, 8, 100] will work like this:
// Global id 0 transformed into (chunk 0, local id 0)
// Global id 1 transformed into (chunk 0, local id 1)
// Gloabl id 5 transformed into (chunk 1, local id 0)
// Global id 7 transformed into (chunk 1, local id 2)
// Global id 99 transformed into (chunk 2, local id 91)
// Global id 100 and greater are not allowed.
message TSequentialDocChunkMappingInfo {
    repeated uint32 Indices = 1;
}
